implementações e ajustes